历史数据修改打印导入数据报错的问题和重新计算不显示标识的问题 设置界面修改显示打印模板和医院的名称 工作列表修改发现的提示信息异常 仪器调试老化测试暂存盘向外面移管添加5s的延迟

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
@@ -1917,7 +1917,7 @@
     <value>移管手从温育盘向清洗盘移管时接收数据超时</value>
   </data>
   <data name="keywordText.MReactToWashPutKnocked" xml:space="preserve">
-    <value>移管手从温育盘向清洗盘移管时多次放管撞管</value>
+    <value>移管手从温育盘向清洗盘移管时放管撞管</value>
   </data>
   <data name="keywordText.MWashLossIsKnocked" xml:space="preserve">
     <value>移管手在清洗盘扔废管时多次取管撞管</value>
