--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmResultQuery.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmResultQuery.resx
@@ -2312,4 +2312,7 @@
   <data name="keywordText.SelectSampleMessage" xml:space="preserve">
     <value>请选择需要导入数据的样本信息！</value>
   </data>
+<data name="keywordText.normal" xml:space="preserve">
+    <value>正常</value>
+  </data>
 </root>
