--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
@@ -929,7 +929,7 @@
     <value>25</value>
   </data>
   <data name="fbtnfrmResultQuery.Text" xml:space="preserve">
-    <value>结果查询</value>
+    <value>历史数据</value>
   </data>
   <data name="fbtnTestResult.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
