工作列表添加从暂存盘向清洗盘取管在取管位置撞管的提示信息 主界面添加是否进行Lis连接判断信息

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
@@ -1334,4 +1334,7 @@
   <data name="keywordText.WashTurnOver" xml:space="preserve">
     <value>Cleaning disk rotation command receiving timeout</value>
   </data>
+  <data name="keywordText.MAddNewTWashIsKnocked" xml:space="preserve">
+    <value>When the pipe transfer hand moves the pipe from the temporary storage tray to the cleaning tray, the pipe hits the pipe at the position of the pipe</value>
+  </data>
 </root>
